rating overflow fixed

--- a/style.css
+++ b/style.css
@@ -1903,6 +1903,10 @@ body.light .tvshowcatrgory_ul li {
         font-size: 26px;
         margin: 94px 0px 0px 16px;
     }
+
+    .tvshows_date_rating {
+        margin: 0 2px 0 2px;
+    }
 }
 
 @media (max-width:445px) {
